--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "Qwirk",
   "version": "0.0.1",
   "dependencies": {
+    "cors": "^2.8.3",
     "express": "^4.15.2",
     "mongoose": "^4.9.2",
     "nconf": "^0.8.4",
