--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,6 +5,7 @@
     ],
     "rules": {
         "func-names": 0,
-        "no-param-reassign": 0
+        "no-param-reassign": 0,
+        "no-underscore-dangle": ["error", { "allow": ["_id"] }]
     }
 }
