--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "mongoose": "^4.9.2",
     "nconf": "^0.8.4",
     "node-uuid": "^1.4.8",
+    "nodemailer": "^4.0.1",
     "path": "^0.12.7",
     "socket.io": "^1.7.3",
     "sugar": "^2.0.4"
